--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "jest 2> output.txt --forceExit  --detectOpenHandles",
-    "start": "node main.js &"
+    "start": "node main.js "
   },
   "repository": {
     "type": "git",
